# compensated

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compensated.h  knlite.h  knlite.hpp
example/: CMakeLists.txt  example.cpp  my_point.h
tests/: CMakeLists.txt  basic.cpp  custom-types.cpp  custom-types.h  lossy_values.h  std.cpp  test_classes.h  tests.cpp  tests.h
